Fix PYTHONPATH for pytest in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
     
     - name: Run tests
       working-directory: ./backend
+      env:
+        PYTHONPATH: .
       run: |
         python -m pytest -v
     
