--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,16 @@ jobs:
       working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
-        pip install pytest httpx
+        pip install pytest
+        pip install httpx
+        pip install fastapi[all]
         pip install -r requirements.txt
+    
+    - name: Verify httpx installation
+      working-directory: ./backend
+      run: |
+        pip list | grep httpx
+        python -c "import httpx; print(f'httpx version: {httpx.__version__}')"
     
     - name: Run tests
       working-directory: ./backend
